GNU Refined code.

--- a/program/gnu/arm_hello.htm
+++ b/program/gnu/arm_hello.htm
@@ -54,20 +54,20 @@
 main.s
 </p>
 <pre class="brush:asm">
-.global _start
+    .global _start
 
-  .text            
+    .text
 _start:
-  mov r0, #1
-  ldr r1, =msg
-  ldr r2, =msg_len
-  mov r7, #4
-  swi 0
+    mov r0, #1
+    ldr r1, =msg
+    ldr r2, =msg_len
+    mov r7, #4
+    swi 0
 
-  mov r7, #1
-  swi 0
+    mov r7, #1
+    swi 0
 
-  .data
+    .data
 msg: .asciz "hello, world!\n"
 msg_len = . - msg
 </pre><br>
@@ -79,10 +79,10 @@ msg_len = . - msg
 $ as main.s -o main.o
 $ ld main.o -o main
 $ qemu-arm ./main
-  hello, world!
+    hello, world!
 </pre>
 <p>
-P.S. 本例在Debian x64上測試，需要重新編譯binutils並開啟支援ARM CPU
+P.S. 本例在Debian x64上測試
 </p>
 
 <p>
