--- a/program/gnu/arm_label.htm
+++ b/program/gnu/arm_label.htm
@@ -51,20 +51,20 @@
 main.s
 </p>
 <pre class="brush:asm">
-  .arm
-  .text
-  .global _start
+    .global _start
 
+    .arm
+    .text
 _start:
-  ldr r0, =1
-  b 0f
+    ldr r0, =1
+    b 0f
 0:
-  ldr r1, =2
-  b 0b
-  .end
+    ldr r1, =2
+    b 0b
+    .end
 </pre>
 <p>
-P.S. #f:forward, #b:back
+P.S. f:forward, b:back
 </p>
 
 <p>
