--- a/program/gnu/makefile_phony.htm
+++ b/program/gnu/makefile_phony.htm
@@ -52,31 +52,35 @@
 </p>
 <pre>
 all:
-  touch all
-</pre>
+    touch all
+</pre><br>
+
 <p>
 <b>make all</b>會產生all文件，但是卻與編譯目標相同名稱，所以只能編譯第一次，再也無法編譯目標all，如下：
 </p>
 <pre>
 $ make
-  touch all
+    touch all
+
 $ make
-  make: 'all' is up to date.
+    make: 'all' is up to date.
+
 $ make
-  make: 'all' is up to date.
+    make: 'all' is up to date.
 </pre><br>
+
 <p>
 解法就是加上<b>.PHONY</b>關鍵字，如下：
 </p>
 <pre>
 .PHONY: all 
 all:
-  touch all
+    touch all
 
 .PHONY: clean
 clean:
-  touch clean
-</pre>
+    touch clean
+</pre><br>
 
 <p>
 <br><a href="../../program.htm">返回上一頁</a>
