--- a/program/gnu/struct.htm
+++ b/program/gnu/struct.htm
@@ -53,17 +53,18 @@ main.c
 <pre class="brush:cpp">
 #include &lt;stdint.h&gt;
 
-struct _mydata{
-  uint8_t i0;
-  uint16_t i1;
-  uint32_t i2;
-}mydata={0};
+struct _mydata {
+    uint8_t i0;
+    uint16_t i1;
+    uint32_t i2;
+} mydata = {0};
 
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  return 0;
+    return 0;
 }
-</pre>
+</pre><br>
+
 <p>
 IDA Pro<br>
 <img src="define_struct/1.jpg" class="maxSize"><br><br>
@@ -71,29 +72,30 @@ IDA Pro<br>
 main.s
 </p>
 <pre class="brush:cpp">
-  .global _start
+    .global _start
 
-  .equ _mydata.i0, 1
-  .equ _mydata.i1, 2
-  .equ _mydata.i2, 4
+    .equ _mydata.i0, 1
+    .equ _mydata.i1, 2
+    .equ _mydata.i2, 4
 
-  .struct 0
-  _mydata_start:
-    i0: .struct . + _mydata.i0
-    i1: .struct . + _mydata.i1
-    i2: .struct . + _mydata.i2
-  _mydata_end:
-  _mydata_len = _mydata_end - _mydata_start
+    .struct 0
+    _mydata_start:
+        i0: .struct . + _mydata.i0
+        i1: .struct . + _mydata.i1
+        i2: .struct . + _mydata.i2
+    _mydata_end:
+    _mydata_len = _mydata_end - _mydata_start
 
-  .data
+    .data
 mydata: .space _mydata_len
 
-  .text
+    .text
 _start:
-  mov $0, %ebx
-  mov $1, %eax
-  int $0x80
-</pre>
+    mov $0, %ebx
+    mov $1, %eax
+    int $0x80
+</pre><br>
+
 <p>
 IDA Pro<br>
 <img src="define_struct/2.jpg" class="maxSize">
