GNU Refined code.

--- a/program/gnu/makefile_cflags.htm
+++ b/program/gnu/makefile_cflags.htm
@@ -48,17 +48,17 @@
 <p><b>Makefile EXTRA_CFLAGS</b></p>
 <hr size="1">
 <p>
-用法如下
+用法如下：
 </p>
 <pre>
 obj-m:= main.o
 KERNEL_DIR = xxx
 
 all:
-  make EXTRA_CFLAGS=-DDEMO -C $(KERNEL_DIR) M=$(PWD) modules
+    make EXTRA_CFLAGS=-DDEMO -C $(KERNEL_DIR) M=$(PWD) modules
 
 clean:
-  make EXTRA_CFLAGS=-DDEMO -C $(KERNEL_DIR) M=$(PWD) clean
+    make EXTRA_CFLAGS=-DDEMO -C $(KERNEL_DIR) M=$(PWD) clean
 </pre><br>
 
 <p>
