GNU Refined code.

--- a/program.htm
+++ b/program.htm
@@ -248,12 +248,12 @@ GNU</h3>
   calling convention</a><br>
 
 &lowast;
-<a href="program/gnu/struct.htm">
-Define Struct</a><br>
-
-&lowast;
 <a href="program/gnu/signal.htm">
 System Signal</a><br>
+
+&lowast;
+<a href="program/gnu/struct.htm">
+Struct In Assembly</a><br>
 
 &lowast;
 <a href="program/gnu/makefile_phony.htm">
@@ -284,20 +284,8 @@ Makefile =、:=、?=、+=</a><br>
 關於musl libc dlclose unload問題</a><br>
 
 &lowast;
-<a href="program/gnu/fix_export_symbol.htm">
-解決"EXPORT_SYMBOL: undefined"問題</a><br>
-
-&lowast;
-<a href="program/gnu/fix_jessie_texinfo.htm">
-解決"cppopts.texi @itemx must follow @item"問題</a><br>
-
-&lowast;
 <a href="program/gnu/fix_lrt.htm">
 解決"undefined reference to mq_timedreceive"問題</a><br>
-
-&lowast;
-<a href="program/gnu/fix_swprintf.htm">
-解決"swprintf(): Invalid Wide Format String"問題</a><br>
 
 &lowast;
 <a href="program/gnu/fix_undef_limb.htm">
