--- a/program/gnu/fix_undef_limb.htm
+++ b/program/gnu/fix_undef_limb.htm
@@ -48,7 +48,7 @@
 <p><b>解決"undefined reference to __gmpn_invert_limb"問題</b></p>
 <hr size="1">
 <p>
-使用如果在編譯gmp時，遇到<b>undefined reference to __gmpn_invert_limb</b>錯誤時，代表host_cpu被設成none，解決方式很簡單，只要在gmp的Makefile裡，將<b>host_cpu=none</b>改成當下編譯的host即可，如(N900)：host_cpu=armv7l，改完後記得<b>make clean &amp;&amp; make</b>
+在編譯gmp時，遇到<b>undefined reference to __gmpn_invert_limb</b>錯誤時，代表host_cpu被設成none，只要在gmp的Makefile裡，將<b>host_cpu=none</b>改成當下編譯的host即可，如(N900)：host_cpu=armv7l，改完後記得<b>make clean &amp;&amp; make</b>
 </p>
 
 <p>
