--- a/program/gnu/ld_library_path.htm
+++ b/program/gnu/ld_library_path.htm
@@ -54,11 +54,11 @@
 $ gcc BasicTnL.c -o BasicTnL -Lxxx -lSDL2 -lEGL -lGLESv2
 
 $ ldd BasicTnL
-  linux-vdso.so.1 (0x00007ffc9628e000)
-  libdl.so.2 => /lib/x86_64-linux-gnu/libdl.so.2 (0x00007f2898ff8000)
-  libX11.so.6 => /lib/x86_64-linux-gnu/libX11.so.6 (0x00007f2898eb7000)
-  libEGL.so => xxx/libEGL.so (0x00007f2898ea6000)
-  libGLES_CM.so => xxx/libGLES_CM.so (0x00007f2897f29000)
+    linux-vdso.so.1 (0x00007ffc9628e000)
+    libdl.so.2 =&gt; /lib/x86_64-linux-gnu/libdl.so.2 (0x00007f2898ff8000)
+    libX11.so.6 =&gt; /lib/x86_64-linux-gnu/libX11.so.6 (0x00007f2898eb7000)
+    libEGL.so =&gt; xxx/libEGL.so (0x00007f2898ea6000)
+    libGLES_CM.so =&gt; xxx/libGLES_CM.so (0x00007f2897f29000)
 </pre><br>
 
 <p>
