GNU Refined code.

--- a/program.htm
+++ b/program.htm
@@ -119,6 +119,10 @@ GNU</h3>
   popen</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/gnu/cpp_signal.htm">
+  signal</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/gnu/cpp_scandir.htm">
   scandir</a><br>
 
@@ -156,7 +160,11 @@ GNU</h3>
 
   &emsp;&emsp;&lowast;
   <a href="program/gnu/cpp_cap.htm">
-  CAP_SYS_ADMIN</a><br>
+  set capability</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/gnu/cpp_setcap_clone.htm">
+  set capability in container</a><br>
 
   &emsp;&emsp;&lowast;
   <a href="program/gnu/cpp_rawfb.htm">
@@ -190,10 +198,6 @@ GNU</h3>
   <a href="program/gnu/cpp_shm.htm">
   shmget、shmat、shmdt、shmctl</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="program/gnu/cpp_setcap_clone.htm">
-  set process capability in container (clone)</a><br>
-
 &oplus;
 <b>Assembly (ARM)</b><br>
   
@@ -202,16 +206,8 @@ GNU</h3>
   hello, world!</a><br>
 
   &emsp;&emsp;&lowast;
-  <a href="program/gnu/arm_label.htm">
-  label</a><br>
-
-  &emsp;&emsp;&lowast;
   <a href="program/gnu/arm_macro_invoke.htm">
-  macro invoke</a><br>
-
-  &emsp;&emsp;&lowast;
-  <a href="program/gnu/arm_pseudo.htm">
-  pseudo instructions</a><br>
+  invoke</a><br>
 
 &oplus;
 <b>Assembly (x86)</b><br>
@@ -241,15 +237,7 @@ GNU</h3>
 
   &emsp;&emsp;&lowast;
   <a href="program/gnu/x64_macro_invoke.htm">
-  macro invoke</a><br>
-
-  &emsp;&emsp;&lowast;
-  <a href="program/gnu/x64_calling_convention.htm">
-  calling convention</a><br>
-
-&lowast;
-<a href="program/gnu/signal.htm">
-System Signal</a><br>
+  invoke</a><br>
 
 &lowast;
 <a href="program/gnu/struct.htm">
@@ -260,16 +248,16 @@ Struct In Assembly</a><br>
 Makefile .PHONY</a><br>
 
 &lowast;
+<a href="program/gnu/makefile_equ.htm">
+Makefile =、:=、?=、+=</a><br>
+
+&lowast;
 <a href="program/gnu/makefile_cflags.htm">
 Makefile EXTRA_CFLAGS</a><br>
 
 &lowast;
 <a href="program/gnu/makefile_shell.htm">
-Makefile 列印SHELL結果</a><br>
-
-&lowast;
-<a href="program/gnu/makefile_equ.htm">
-Makefile =、:=、?=、+=</a><br>
+Makefile 列印shell執行結果</a><br>
 
 &lowast;
 <a href="program/gnu/pragma.htm">
