--- a/program/gnu/arm_macro_invoke.htm
+++ b/program/gnu/arm_macro_invoke.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>GNU &gt;&gt; Assembly (ARM)</h3>
-<p><b>macro invoke</b></p>
+<p><b>invoke</b></p>
 <hr size="1">
 <p>
 main.s
