--- a/program/gnu/cpp_signal.htm
+++ b/program/gnu/cpp_signal.htm
@@ -44,11 +44,11 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>GNU</h3>
-<p><b>System Signal</b></p>
+<h3>GNU &gt;&gt; C/C++</h3>
+<p><b>signal</b></p>
 <hr size="1">
 <p>
-如下：
+system signal
 </p>
 <table>
   <tr><th>Number</th><th>Name</th><th>Function</th></tr>
