--- a/program/gnu/makefile_shell.htm
+++ b/program/gnu/makefile_shell.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>GNU</h3>
-<p><b>Makefile 列印SHELL結果</b></p>
+<p><b>Makefile 列印shell執行結果</b></p>
 <hr size="1">
 <p>
 用法如下：
