--- a/program/gnu/cpp_cap.htm
+++ b/program/gnu/cpp_cap.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>GNU &gt;&gt; C/C++</h3>
-<p><b>CAP_SYS_ADMIN</b></p>
+<p><b>set capability</b></p>
 <hr size="1">
 <p>
 main.c
