GNU Refined code.

--- a/program.htm
+++ b/program.htm
@@ -203,14 +203,18 @@ GNU</h3>
   
   &emsp;&emsp;&lowast;
   <a href="program/gnu/arm_hello.htm">
-  hello, world!</a><br>
-
-  &emsp;&emsp;&lowast;
-  <a href="program/gnu/arm_macro_invoke.htm">
-  invoke</a><br>
+  hello, world! (swi)</a><br>
 
 &oplus;
 <b>Assembly (x86)</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/gnu/x86_hello_gs.htm">
+  hello, world! (gs)</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/gnu/x86_hello_printf.htm">
+  hello, world! (printf)</a><br>
 
   &emsp;&emsp;&lowast;
   <a href="program/gnu/x86_hello_int80.htm">
@@ -220,28 +224,24 @@ GNU</h3>
   <a href="program/gnu/x86_hello_sysenter.htm">
   hello, world! (sysenter)</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="program/gnu/x86_int80_sysenter_syscall.htm">
-  int 0x80、sysenter、syscall</a><br>
-
 &oplus;
 <b>Assembly (x64)</b><br>
-
-  &emsp;&emsp;&lowast;
-  <a href="program/gnu/x64_hello_int80.htm">
-  hello, world! (int 0x80)</a><br>
 
   &emsp;&emsp;&lowast;
   <a href="program/gnu/x64_hello_syscall.htm">
   hello, world! (syscall)</a><br>
 
   &emsp;&emsp;&lowast;
-  <a href="program/gnu/x64_macro_invoke.htm">
-  invoke</a><br>
+  <a href="program/gnu/x64_hello_int80.htm">
+  hello, world! (int 0x80)</a><br>
+
+&lowast;
+<a href="program/gnu/invoke.htm">
+invoke</a><br>
 
 &lowast;
 <a href="program/gnu/struct.htm">
-Struct In Assembly</a><br>
+struct</a><br>
 
 &lowast;
 <a href="program/gnu/makefile_phony.htm">
@@ -258,6 +258,10 @@ Makefile EXTRA_CFLAGS</a><br>
 &lowast;
 <a href="program/gnu/makefile_shell.htm">
 Makefile 列印shell執行結果</a><br>
+
+&lowast;
+<a href="program/gnu/x86_int80_sysenter_syscall.htm">
+int 0x80、sysenter、syscall</a><br>
 
 &lowast;
 <a href="program/gnu/pragma.htm">
