--- a/program/gnu/x86_int80_sysenter_syscall.htm
+++ b/program/gnu/x86_int80_sysenter_syscall.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>GNU &gt;&gt; Assembly (x86)</h3>
+<h3>GNU</h3>
 <p><b>int 0x80、sysenter、syscall</b></p>
 <hr size="1">
 <p>
@@ -56,10 +56,10 @@
 5. <a href="https://stackoverflow.com/questions/29833938/what-is-the-compatible-subset-of-intels-and-amds-x86-64-implementations">what-is-the-compatible-subset-of-intels-and-amds-x86-64-implementations</a><br>
 6. <a href="https://stackoverflow.com/questions/29783896/why-does-syscall-compile-in-nasm-32-bit-output-while-popa-does-not-compile-in-64/29784932#29784932">why-does-syscall-compile-in-nasm-32-bit-output-while-popa-does-not-compile-in-64</a><br><br>
 
-結論：
+使用時機如下：
 </p>
 <table>
-  <tr><th>platform</th><th>invoke</th></tr>
+  <tr><th>平台</th><th>呼叫方式</th></tr>
   <tr><td>x64</td><td>int 0x80、syscall</td></tr>
   <tr><td>x86</td><td>int 0x80、sysenter</td></tr>
 </table><br>
