--- a/program/gnu/arm_hello.htm
+++ b/program/gnu/arm_hello.htm
@@ -45,45 +45,50 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>GNU &gt;&gt; Assembly (ARM)</h3>
-<p><b>hello, world!</b></p>
+<p><b>hello, world! (swi)</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="http://kerseykyle.com/articles/ARM-assembly-hello-world">ARM-assembly-hello-world</a><br><br>
+1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/master/constants/syscalls.md#arm-32_bit_EABI">syscall</a><br>
+2. <a href="https://github.com/kevinhooke/learning-arm-asm/blob/master/helloworld.s">helloworld</a><br>
+3. <a href="http://kerseykyle.com/articles/ARM-assembly-hello-world">ARM-assembly-hello-world</a><br><br>
 
 main.s
 </p>
 <pre class="brush:asm">
     .global _start
 
+    .data
+msg: .ascii "hello, world!\n"
+len = . - msg
+
     .text
 _start:
+    mov r7, #4
     mov r0, #1
     ldr r1, =msg
-    ldr r2, =msg_len
-    mov r7, #4
+    ldr r2, =len
     swi 0
 
     mov r7, #1
+    mov r0, #0
     swi 0
-
-    .data
-msg: .asciz "hello, world!\n"
-msg_len = . - msg
 </pre><br>
+
+<table>
+<tr><th>NR</th><th>syscall name</th><th>r7</th><th>arg0(r0)</th><th>arg1(r1)</th><th>arg2(r2)</th></tr>
+<tr><td>1</td><td>exit</td><td>1</td><td>int error_code</td><td></td><td></td></tr>
+<tr><td>4</td><td>write</td><td>4</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
+</table><br>
 
 <p>
 編譯、執行
 </p> 
 <pre>
-$ as main.s -o main.o
-$ ld main.o -o main
-$ qemu-arm ./main
+$ gcc main.s -o main -nostdlib
+$ ./main
     hello, world!
-</pre>
-<p>
-P.S. 本例在Debian x64上測試
-</p>
+</pre><br>
 
 <p>
 <br><a href="../../program.htm">返回上一頁</a>
