--- a/program/gnu/cpp_shm.htm
+++ b/program/gnu/cpp_shm.htm
@@ -90,7 +90,7 @@ int main(int argc, char **argv)
 
     id = shmget(9999, 1024, IPC_CREAT | 0666);
     p = shmat(id, NULL, 0);
-    for (p; *p; p++) {
+    for (; *p; p++) {
         printf("%c", *p);
     }
     shmdt(p);
