--- a/program/gnu/struct.htm
+++ b/program/gnu/struct.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>GNU</h3>
-<p><b>Struct in Assembly</b></p>
+<p><b>struct</b></p>
 <hr size="1">
 <p>
 main.c
