--- a/program/gnu/x64_hello_syscall.htm
+++ b/program/gnu/x64_hello_syscall.htm
@@ -48,34 +48,43 @@
 <p><b>hello, world! (syscall)</b></p>
 <hr size="1">
 <p>
+參考資訊：<br>
+1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/master/constants/syscalls.md#x86_64-64_bit">syscall</a><br>
+2. <a href="https://reverseengineering.stackexchange.com/questions/2869/how-to-use-sysenter-under-linux">how-to-use-sysenter-under-linux</a><br><br>
+
 main.s
 </p>
 <pre class="brush:asm">
     .global _start
+
+    .data
+msg: .ascii "hello, world!\n"
+len = . - msg
 
     .text
 _start:
     mov $1, %rax
     mov $1, %rdi
     mov $msg, %rsi
-    mov $msg_len, %rdx
+    mov $len, %rdx
     syscall
 
     mov $60, %rax
     xor %rdi, %rdi
     syscall
-
-    .data
-msg: .ascii "hello, world!\n"
-msg_len = . - msg
 </pre><br>
+
+<table>
+<tr><th>NR</th><th>syscall name</th><th>rax</th><th>arg0(rdi)</th><th>arg1(rsi)</th><th>arg2(rdx)</th></tr>
+<tr><td>1</td><td>write</td><td>1</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
+<tr><td>60</td><td>exit</td><td>60</td><td>int error_code</td><td></td><td></td></tr>
+</table><br>
 
 <p>
 編譯、執行
 </p>
 <pre>
-$ as main.s -o main.o
-$ ld main.o -o main
+$ gcc main.s -o main.o -nostdlib
 $ ./main
     hello, world!
 </pre><br>
