--- a/program/gnu/x86_hello_sysenter.htm
+++ b/program/gnu/x86_hello_sysenter.htm
@@ -49,49 +49,55 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://reverseengineering.stackexchange.com/questions/2869/how-to-use-sysenter-under-linux">how-to-use-sysenter-under-linux</a><br><br>
+1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/master/constants/syscalls.md#arm-32_bit_EABI">syscall</a><br>
+2. <a href="https://reverseengineering.stackexchange.com/questions/2869/how-to-use-sysenter-under-linux">how-to-use-sysenter-under-linux</a><br><br>
 
 main.s
 </p>
 <pre class="brush:asm">
     .global _start
+    
+    .data
+msg: .ascii "hello, world!\n"
+len = . - msg
   
     .text
 _start:
     push %ebp
     mov %esp, %ebp
-    mov $msg_len, %edx
+    mov $len, %edx
     mov $msg, %ecx
     mov $1, %ebx
     mov $4, %eax
-    push $ret
+    push $final
     push %ecx
     push %edx
     push %ebp
     mov %esp, %ebp
     sysenter
 
-ret:
+final:
     mov $0, %ebx
     mov $1, %eax
-    push $ret
+    push $final
     push %ecx
     push %edx
     push %ebp
     mov %esp, %ebp
     sysenter
-
-    .data
-msg: .ascii "hello, world!\n"
-msg_len = . - msg
 </pre><br>
+
+<table>
+<tr><th>NR</th><th>syscall name</th><th>r7</th><th>arg0(r0)</th><th>arg1(r1)</th><th>arg2(r2)</th></tr>
+<tr><td>1</td><td>exit</td><td>1</td><td>int error_code</td><td></td><td></td></tr>
+<tr><td>4</td><td>write</td><td>4</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
+</table><br>
 
 <p>
 編譯、執行
 </p>
 <pre>
-$ as --32 main.s -o main.o
-$ ld -m elf_i386 main.o -o main
+$ gcc main.s -o main -nostdlib
 $ ./main
     hello, world!
 </pre><br>
