GNU Refined code.

--- a/program.htm
+++ b/program.htm
@@ -205,6 +205,10 @@ GNU</h3>
   <a href="program/gnu/arm_hello.htm">
   hello, world! (swi)</a><br>
 
+  &emsp;&emsp;&lowast;
+  <a href="program/gnu/arm_hello_printf.htm">
+  hello, world! (printf)</a><br>
+
 &oplus;
 <b>Assembly (x86)</b><br>
 
@@ -226,6 +230,10 @@ GNU</h3>
 
 &oplus;
 <b>Assembly (x64)</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/gnu/x64_hello_printf.htm">
+  hello, world! (printf)</a><br>
 
   &emsp;&emsp;&lowast;
   <a href="program/gnu/x64_hello_syscall.htm">
