--- a/program/gnu/invoke.htm
+++ b/program/gnu/invoke.htm
@@ -90,10 +90,11 @@ arm32
   
     .text
 main:
+    push {lr}
     invoke SDL_Init, $SDL_INIT_VIDEO
     invoke SDL_SetVideoMode, $320, $240, $32, $SDL_HWSURFACE
     invoke SDL_Quit
-    ret
+    pop {pc}
 </pre><br>
 
 <p>
