--- a/program/gnu/x64_hello_int80.htm
+++ b/program/gnu/x64_hello_int80.htm
@@ -83,7 +83,7 @@ _start:
 編譯、執行
 </p>
 <pre>
-$ gcc main.s -o main.o -nostdlib
+$ gcc main.s -o main -nostdlib
 $ ./main
     hello, world!
 </pre><br>
