--- a/program/gnu/x64_hello_printf.htm
+++ b/program/gnu/x64_hello_printf.htm
@@ -44,61 +44,41 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>GNU &gt;&gt; Assembly (x86)</h3>
-<p><b>hello, world! (sysenter)</b></p>
+<h3>GNU &gt;&gt; Assembly (x64)</h3>
+<p><b>hello, world! (printf)</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/master/constants/syscalls.md#arm-32_bit_EABI">syscall</a><br>
-2. <a href="https://reverseengineering.stackexchange.com/questions/2869/how-to-use-sysenter-under-linux">how-to-use-sysenter-under-linux</a><br><br>
+1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/master/constants/syscalls.md#arm-32_bit_EABI">syscall</a><br><br>
 
 main.s
 </p>
 <pre class="brush:asm">
-    .global _start
-    
+    .global main
+    .extern printf
+  
     .data
-msg: .ascii "hello, world!\n"
-len = . - msg
+msg: .asciz "hello, world!\n"
   
     .text
-_start:
-    push %ebp
-    mov %esp, %ebp
-
-    mov $len, %edx
-    mov $msg, %ecx
-    mov $1, %ebx
-    mov $4, %eax
-    push $final
-    push %ecx
-    push %edx
-    push %ebp
-    mov %esp, %ebp
-    sysenter
-
-final:
-    mov $0, %ebx
-    mov $1, %eax
-    push $final
-    push %ecx
-    push %edx
-    push %ebp
-    mov %esp, %ebp
-    sysenter
+main:
+    push %rbp
+    mov %rsp, %rbp
+    
+    mov $msg, %rdi
+    call printf
+    xor %rax, %rax
+ 
+    mov %rbp, %rsp
+    pop %rbp
+    ret
 </pre><br>
-
-<table>
-<tr><th>NR</th><th>syscall name</th><th>r7</th><th>arg0(r0)</th><th>arg1(r1)</th><th>arg2(r2)</th></tr>
-<tr><td>1</td><td>exit</td><td>1</td><td>int error_code</td><td></td><td></td></tr>
-<tr><td>4</td><td>write</td><td>4</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
-</table><br>
 
 <p>
 編譯、執行
 </p>
 <pre>
-$ gcc main.s -o main -nostdlib
+$ gcc main.s -o main
 $ ./main
     hello, world!
 </pre><br>
