--- a/program/gnu/x64_hello_int80.htm
+++ b/program/gnu/x64_hello_int80.htm
@@ -74,7 +74,7 @@ _start:
 </pre><br>
 
 <table>
-<tr><th>NR</th><th>syscall name</th><th>rax</th><th>arg0(rdi)</th><th>arg1(rsi)</th><th>arg2(rdx)</th></tr>
+<tr><th>NR</th><th>syscall name</th><th>rax</th><th>arg0(rbx)</th><th>arg1(rcx)</th><th>arg2(rdx)</th></tr>
 <tr><td>1</td><td>write</td><td>1</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
 <tr><td>60</td><td>exit</td><td>60</td><td>int error_code</td><td></td><td></td></tr>
 </table><br>
