--- a/program/gnu/x86_hello_int80.htm
+++ b/program/gnu/x86_hello_int80.htm
@@ -75,7 +75,7 @@ _start:
 </pre><br>
 
 <table>
-<tr><th>NR</th><th>syscall name</th><th>r7</th><th>arg0(r0)</th><th>arg1(r1)</th><th>arg2(r2)</th></tr>
+<tr><th>NR</th><th>syscall name</th><th>eax</th><th>arg0(ebx)</th><th>arg1(ecx)</th><th>arg2(edx)</th></tr>
 <tr><td>1</td><td>exit</td><td>1</td><td>int error_code</td><td></td><td></td></tr>
 <tr><td>4</td><td>write</td><td>4</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
 </table><br>
