--- a/program/gnu/x86_hello_sysenter.htm
+++ b/program/gnu/x86_hello_sysenter.htm
@@ -66,10 +66,10 @@ _start:
     push %ebp
     mov %esp, %ebp
 
-    mov $len, %edx
-    mov $msg, %ecx
-    mov $1, %ebx
     mov $4, %eax
+    mov $1, %ebx
+    mov $msg, %ecx
+    mov $len, %edx
     push $final
     push %ecx
     push %edx
@@ -78,8 +78,8 @@ _start:
     sysenter
 
 final:
-    mov $0, %ebx
     mov $1, %eax
+    mov $0, %ebx
     push $final
     push %ecx
     push %edx
@@ -89,7 +89,7 @@ final:
 </pre><br>
 
 <table>
-<tr><th>NR</th><th>syscall name</th><th>r7</th><th>arg0(r0)</th><th>arg1(r1)</th><th>arg2(r2)</th></tr>
+<tr><th>NR</th><th>syscall name</th><th>eax</th><th>arg0(ebx)</th><th>arg1(ecx)</th><th>arg2(edx)</th></tr>
 <tr><td>1</td><td>exit</td><td>1</td><td>int error_code</td><td></td><td></td></tr>
 <tr><td>4</td><td>write</td><td>4</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
 </table><br>
