GNU Refined code.

--- a/program.htm
+++ b/program.htm
@@ -216,6 +216,10 @@ GNU</h3>
   <a href="program/gnu/arm64_hello_svc.htm">
   hello, world! (svc)</a><br>
 
+  &emsp;&emsp;&lowast;
+  <a href="program/gnu/arm64_hello_printf.htm">
+  hello, world! (printf)</a><br>
+
 &oplus;
 <b>Assembly (x86)</b><br>
 
