GNU Refined code.

--- a/program.htm
+++ b/program.htm
@@ -221,6 +221,13 @@ GNU</h3>
   hello, world! (printf)</a><br>
 
 &oplus;
+<b>Assembly (MIPSEL)</b><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="program/gnu/mipsel_hello_syscall.htm">
+  hello, world! (syscall)</a><br>
+
+&oplus;
 <b>Assembly (x86)</b><br>
 
   &emsp;&emsp;&lowast;
