--- a/program/gnu/mipsel_hello_syscall.htm
+++ b/program/gnu/mipsel_hello_syscall.htm
@@ -44,34 +44,41 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>GNU &gt;&gt; Assembly (ARM64)</h3>
-<p><b>hello, world! (printf)</b></p>
+<h3>GNU &gt;&gt; Assembly (MIPSEL)</h3>
+<p><b>hello, world! (syscall)</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/master/constants/syscalls.md#arm-32_bit_EABI">syscall</a><br>
-2. <a href="https://stackoverflow.com/questions/64638627/explain-arm64-instruction-stp">explain-arm64-instruction-stp</a><br><br>
+1. <a href="https://syscalls.w3challs.com/?arch=mips_o32">syscalls</a><br>
+2. <a href="https://teaching.basilico.di.unimi.it/lib/exe/fetch.php/pub/debian-mips-tutorial.pdf">debian-mips-tutorial</a><br><br>
 
 main.s
 </p>
 <pre class="brush:asm">
     .global main
-    .extern printf
 
     .data
 msg: .asciz "hello, world!\n"
+len = . - msg
 
     .text
 main:
-    stp x29, x30, [sp, #-0x10]!
+    li $v0, 4004
+    li $a0, 1
+    la $a1, msg
+    li $a2, len
+    syscall
 
-    ldr x0, =msg
-    bl printf
-    mov x0, #0
-
-    ldp x29, x30, [sp], #0x10
-    ret
+    li $v0, 4001
+    li $a0, 0
+    syscall
 </pre><br>
+
+<table>
+<tr><th>NR</th><th>syscall name</th><th>v0</th><th>arg0(a0)</th><th>arg1(a1)</th><th>arg2(a2)</th></tr>
+<tr><td>4001</td><td>exit</td><td>1</td><td>int error_code</td><td></td><td></td></tr>
+<tr><td>4004</td><td>write</td><td>4</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
+</table><br>
 
 <p>
 編譯、執行
