GNU Refined code.

--- a/program.htm
+++ b/program.htm
@@ -224,6 +224,10 @@ GNU</h3>
 <b>Assembly (MIPSEL)</b><br>
   
   &emsp;&emsp;&lowast;
+  <a href="program/gnu/mipsel_hello_printf.htm">
+  hello, world! (printf)</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/gnu/mipsel_hello_syscall.htm">
   hello, world! (syscall)</a><br>
 
