GNU Refined code.

--- a/program.htm
+++ b/program.htm
@@ -210,7 +210,7 @@ GNU</h3>
   hello, world! (printf)</a><br>
 
 &oplus;
-<b>Assembly (ARM64)</b><br>
+<b>Assembly (ARM 64)</b><br>
   
   &emsp;&emsp;&lowast;
   <a href="program/gnu/arm64_hello_svc.htm">
@@ -230,6 +230,17 @@ GNU</h3>
   &emsp;&emsp;&lowast;
   <a href="program/gnu/mipsel_hello_syscall.htm">
   hello, world! (syscall)</a><br>
+
+&oplus;
+<b>Assembly (RISC-V 64)</b><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="program/gnu/riscv64_hello_ecall.htm">
+  hello, world! (ecall)</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/gnu/riscv64_hello_printf.htm">
+  hello, world! (printf)</a><br>
 
 &oplus;
 <b>Assembly (x86)</b><br>
