--- a/program/gnu/arm64_hello_printf.htm
+++ b/program/gnu/arm64_hello_printf.htm
@@ -44,12 +44,12 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>GNU &gt;&gt; Assembly (ARM64)</h3>
+<h3>GNU &gt;&gt; Assembly (ARM 64)</h3>
 <p><b>hello, world! (printf)</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/master/constants/syscalls.md#arm-32_bit_EABI">syscall</a><br>
+1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/HEAD/constants/syscalls.md">syscall</a><br>
 2. <a href="https://stackoverflow.com/questions/64638627/explain-arm64-instruction-stp">explain-arm64-instruction-stp</a><br><br>
 
 main.s
@@ -77,8 +77,8 @@ main:
 編譯、執行
 </p> 
 <pre>
-$ gcc main.s -o main
-$ ./main
+$ aarch64-linux-gnu-gcc main.s -o main -static
+$ qemu-aarch64 ./main
     hello, world!
 </pre><br>
 
