--- a/program/gnu/arm_hello_printf.htm
+++ b/program/gnu/arm_hello_printf.htm
@@ -49,7 +49,7 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/master/constants/syscalls.md#arm-32_bit_EABI">syscall</a><br>
+1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/HEAD/constants/syscalls.md">syscall</a><br>
 2. <a href="https://github.com/kevinhooke/learning-arm-asm/blob/master/helloworld.s">helloworld</a><br>
 3. <a href="http://kerseykyle.com/articles/ARM-assembly-hello-world">ARM-assembly-hello-world</a><br><br>
 
@@ -77,8 +77,8 @@ main:
 編譯、執行
 </p> 
 <pre>
-$ gcc main.s -o main
-$ ./main
+$ arm-linux-gnueabihf-gcc main.s -o main -static
+$ qemu-arm ./main
     hello, world!
 </pre><br>
 
