--- a/program/gnu/mipsel_hello_syscall.htm
+++ b/program/gnu/mipsel_hello_syscall.htm
@@ -49,7 +49,7 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://syscalls.w3challs.com/?arch=mips_o32">syscalls</a><br>
+1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/HEAD/constants/syscalls.md">syscall</a><br>
 2. <a href="https://teaching.basilico.di.unimi.it/lib/exe/fetch.php/pub/debian-mips-tutorial.pdf">debian-mips-tutorial</a><br><br>
 
 main.s
@@ -84,8 +84,8 @@ main:
 編譯、執行
 </p> 
 <pre>
-$ gcc main.s -o main
-$ ./main
+$ mipsel-linux-gnu-gcc main.s -o main -static
+$ qemu-mipsel ./main
     hello, world!
 </pre><br>
 
