--- a/program/gnu/x86_hello_printf.htm
+++ b/program/gnu/x86_hello_printf.htm
@@ -49,7 +49,7 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/master/constants/syscalls.md#arm-32_bit_EABI">syscall</a><br><br>
+1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/HEAD/constants/syscalls.md">syscall</a><br><br>
 
 main.s
 </p>
@@ -78,8 +78,8 @@ main:
 編譯、執行
 </p>
 <pre>
-$ gcc main.o -o main
-$ ./main
+$ i686-linux-gnu-gcc main.s -o main -static
+$ qemu-i386 ./main
     hello, world!
 </pre><br>
 
