--- a/program/gnu/x86_hello_sysenter.htm
+++ b/program/gnu/x86_hello_sysenter.htm
@@ -49,7 +49,7 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/master/constants/syscalls.md#arm-32_bit_EABI">syscall</a><br>
+1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/HEAD/constants/syscalls.md">syscall</a><br>
 2. <a href="https://reverseengineering.stackexchange.com/questions/2869/how-to-use-sysenter-under-linux">how-to-use-sysenter-under-linux</a><br><br>
 
 main.s
@@ -101,7 +101,10 @@ final:
 $ gcc main.s -o main -nostdlib
 $ ./main
     hello, world!
-</pre><br>
+</pre>
+<p>
+P.S. 於Debian x64環境測試
+</p>
 
 <p>
 <br><a href="../../program.htm">返回上一頁</a>
