--- a/program/gnu/x64_hello_int80.htm
+++ b/program/gnu/x64_hello_int80.htm
@@ -49,7 +49,7 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/master/constants/syscalls.md#arm-32_bit_EABI">syscall</a><br><br>
+1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/HEAD/constants/syscalls.md">syscall</a><br><br>
 
 main.s
 </p>
@@ -83,8 +83,8 @@ _start:
 編譯、執行
 </p>
 <pre>
-$ gcc main.s -o main -nostdlib
-$ ./main
+$ x86_64-linux-gnu-gcc main.s -o main -static -nostdlib
+$ qemu-x86_64 ./main
     hello, world!
 </pre><br>
 
