--- a/program/gnu/x64_hello_syscall.htm
+++ b/program/gnu/x64_hello_syscall.htm
@@ -49,7 +49,7 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/master/constants/syscalls.md#x86_64-64_bit">syscall</a><br>
+1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/HEAD/constants/syscalls.md">syscall</a><br>
 2. <a href="https://reverseengineering.stackexchange.com/questions/2869/how-to-use-sysenter-under-linux">how-to-use-sysenter-under-linux</a><br><br>
 
 main.s
@@ -84,8 +84,8 @@ _start:
 編譯、執行
 </p>
 <pre>
-$ gcc main.s -o main -nostdlib
-$ ./main
+$ x86_64-linux-gnu-gcc main.s -o main -static -nostdlib
+$ qemu-x86_64 ./main
     hello, world!
 </pre><br>
 
