--- a/program/gnu/x86_hello_gs.htm
+++ b/program/gnu/x86_hello_gs.htm
@@ -49,7 +49,7 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/master/constants/syscalls.md#arm-32_bit_EABI">syscall</a><br>
+1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/HEAD/constants/syscalls.md">syscall</a><br>
 2. <a href="https://reverseengineering.stackexchange.com/questions/2869/how-to-use-sysenter-under-linux">how-to-use-sysenter-under-linux</a><br><br>
 
 main.s
@@ -84,8 +84,8 @@ main:
 編譯、執行
 </p>
 <pre>
-$ gcc main.s -o main
-$ ./main
+$ i686-linux-gnu-gcc main.s -o main -static
+$ qemu-i386 ./main
     hello, world!
 </pre><br>
 
