--- a/program/gnu/x86_hello_int80.htm
+++ b/program/gnu/x86_hello_int80.htm
@@ -49,7 +49,7 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/master/constants/syscalls.md#arm-32_bit_EABI">syscall</a><br>
+1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/HEAD/constants/syscalls.md">syscall</a><br>
 2. <a href="https://tldp.org/HOWTO/Assembly-HOWTO/hello.html">Assembly-HOWTO</a><br><br>
 
 main.s
@@ -84,8 +84,8 @@ _start:
 編譯、執行
 </p>
 <pre>
-$ gcc main.s -o main -nostdlib
-$ ./main
+$ i686-linux-gnu-gcc main.s -o main -static -nostdlib
+$ qemu-i386 ./main
     hello, world!
 </pre><br>
 
