NASM Refined code.

--- a/program.htm
+++ b/program.htm
@@ -75,9 +75,9 @@
 <br><br>
 <p>
   <a href="#gnu"><img src="img/photos/gnu.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="GNU"/></a>
+  <a href="#nasm"><img src="img/photos/nasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="NASM"/></a>
   <a href="#rust"><img src="img/photos/rust.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Rust"/></a>
   <a href="#masm32"><img src="img/photos/masm32.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="MASM32"/></a>
-  <a href="#nasm"><img src="img/photos/nasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="NASM"/></a>
   <a href="#hla"><img src="img/photos/hla.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="HLA"/></a>
   <a href="#sdl"><img src="img/photos/sdl.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SDL"/></a>
   <a href="#sfml"><img src="img/photos/sfml.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SFML"/></a>
@@ -159,7 +159,7 @@ GNU</h3>
   lz77 compress</a><br>
 
   &emsp;&emsp;&lowast;
-  <a href="program/gnu/cpp_cap.htm">
+  <a href="program/gnu/cpp_setcap.htm">
   set capability</a><br>
 
   &emsp;&emsp;&lowast;
@@ -202,7 +202,7 @@ GNU</h3>
 <b>Assembly (ARM)</b><br>
   
   &emsp;&emsp;&lowast;
-  <a href="program/gnu/arm_hello.htm">
+  <a href="program/gnu/arm_hello_swi.htm">
   hello, world! (swi)</a><br>
 
   &emsp;&emsp;&lowast;
@@ -325,6 +325,66 @@ int 0x80、sysenter、syscall</a><br>
 解決"undefined reference to __gmpn_invert_limb"問題</a>
 <br><br><br><br>
 
+<div id="nasm"></div>
+<h3><img src="img/photos/nasm.jpg" class="floatLeft"/>
+Netwide Assembler (NASM)</h3>
+<hr size="1"><br><br><br><br><br>
+
+&oplus;
+<b>Assembly (x86)</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/nasm/x86_setup.htm">
+  開發環境</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/nasm/x86_hello_printf.htm">
+  hello, world! (printf)</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/nasm/x86_hello_int80.htm">
+  hello, world! (int 0x80)</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/nasm/x86_hello_sysenter.htm">
+  hello, world! (sysenter)</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/nasm/x86_argc.htm">
+  argc、argv</a><br>
+
+&oplus;
+<b>Assembly (x64)</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/nasm/x86_setup.htm">
+  開發環境</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/nasm/x64_hello_printf.htm">
+  hello, world! (printf)</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="program/nasm/x64_hello_syscall.htm">
+  hello, world! (syscall)</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="program/nasm/x64_hello_int80.htm">
+  hello, world! (int 0x80)</a><br>
+
+&lowast;
+<a href="program/nasm/fix_libgcc.a.htm">
+解決"undefined reference to __udivdi3"問題</a><br>
+
+&lowast;
+<a href="program/nasm/fix_libgcc_eh.a.htm">
+解決"undefined reference to _Unwind_Resume"問題</a><br>
+
+&lowast;
+<a href="program/nasm/fix_start-group.htm">
+解決"undefined reference to dl_iterate_phdr"問題</a><br>
+<br><br><br><br>
+
 <div id="rust"></div>
 <h3><img src="img/photos/rust.jpg" class="floatLeft"/>
 Rust</h3>
@@ -401,74 +461,6 @@ MASM32</h3>
   &emsp;&emsp;&lowast;
   <a href="program/masm32/x86_hello.htm">
   Hello, world!</a><br>
-<br><br><br><br>
-
-<div id="nasm"></div>
-<h3><img src="img/photos/nasm.jpg" class="floatLeft"/>
-NASM</h3>
-<hr size="1"><br><br><br><br><br>
-
-&lowast;
-<a href="program/nasm/setup.htm">
-開發環境</a><br>
-
-&oplus;
-<b>Assembly (x86)</b><br>
-
-  &emsp;&emsp;&lowast;
-  <a href="program/nasm/x86_hello_int80.htm">
-  hello, world! (int 0x80)</a><br>
-
-  &emsp;&emsp;&lowast;
-  <a href="program/nasm/x86_hello_sysenter.htm">
-  hello, world! (sysenter)</a><br>
-
-  &emsp;&emsp;&lowast;
-  <a href="program/nasm/x86_printf.htm">
-  printf</a><br>
-
-  &emsp;&emsp;&lowast;
-  <a href="program/nasm/x86_argc.htm">
-  argc、argv</a><br>
-
-&oplus;
-<b>Assembly (x64)</b><br>
-
-  &emsp;&emsp;&lowast;
-  <a href="program/nasm/x64_hello_int80.htm">
-  hello, world! (int 0x80)</a><br>
-
-  &emsp;&emsp;&lowast;
-  <a href="program/nasm/x64_hello_syscall.htm">
-  hello, world! (syscall)</a><br>
-  
-&lowast;
-<a href="program/nasm/variable.htm">
-variable</a><br>
-
-&lowast;
-<a href="program/nasm/clear_eflags.htm">
-clear eflags</a><br>
-
-&lowast;
-<a href="program/nasm/ld_printf.htm">
-如何使用ld連結printf</a><br>
-
-&lowast;
-<a href="program/nasm/link_gcc_lib.htm">
-如何呼叫gcc library(沒有使用gcc compiler)</a><br>
-
-&lowast;
-<a href="program/nasm/fix_libgcc.a.htm">
-解決"undefined reference to __udivdi3"問題</a><br>
-
-&lowast;
-<a href="program/nasm/fix_libgcc_eh.a.htm">
-解決"undefined reference to _Unwind_Resume"問題</a><br>
-
-&lowast;
-<a href="program/nasm/fix_start-group.htm">
-解決"undefined reference to dl_iterate_phdr"問題</a><br>
 <br><br><br><br>
 
 <div id="hla"></div>
