--- a/program/nasm/x86_setup.htm
+++ b/program/nasm/x86_setup.htm
@@ -29,7 +29,7 @@
   <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
   
   <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushAsm.js"></script>
+  <script type="text/javascript" src="../../scripts/shBrushCpp.js"></script>
 
   <!-- Conditional comment to apply opacity fix for IE #content background.
        Invalid CSS, but can be removed without harming design -->
@@ -44,68 +44,14 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>NASM</h3>
-<p><b>如何呼叫gcc library(沒有使用gcc compiler)</b></p>
+<h3>Netwide Assembler (NASM) &gt;&gt; Assembly (x86)</h3>
+<p><b>安装環境</b></p>
 <hr size="1">
 <p>
-參考資訊：<br>
-1. <a href="https://github.com/steward-fu/nasm">nasm</a><br><br>
-
-main.s
-</p>
-<pre class="brush:asm">
-  global _start
-  extern atol
-  extern printf
-  extern __uClibc_main
-
-  section .data
-num db "100", 0
-fmt db "0x%08x", 10, 0
-
-  section .text
-_start:
-  xor ebp, ebp
-  pop esi
-  mov ecx, esp
-  and esp, 0fffffff0h
-  push eax
-  push esp
-  push edx
-  push 0
-  push 0
-  push ecx
-  push esi
-  push main
-  call __uClibc_main
-  xor eax, eax
-  leave
-  ret
-
-main:
-  push ebp
-  mov ebp, esp
-
-  push num
-  call atol
-
-  push eax
-  push fmt
-  call printf
-
-  xor eax, eax
-  leave
-  ret
-</pre><br>
-
-<p>
-編譯、執行
+步驟如下：
 </p>
 <pre>
-$ nasm -felf32 main.s -o main.o
-$ ld -melf_i386 main.o -o main libc.a
-$ ./main
-  0x00000064
+$ sudo apt-get install nasm -y
 </pre><br>
 
 <p>
