--- a/program/nasm/x86_argc.htm
+++ b/program/nasm/x86_argc.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>NASM &gt;&gt; Assembly (x86)</h3>
+<h3>Netwide Assembler (NASM) &gt;&gt; Assembly (x86)</h3>
 <p><b>argc、argv</b></p>
 <hr size="1">
 <p>
@@ -54,39 +54,40 @@
 main.s
 </p>
 <pre class="brush:asm">
-  global main
-  extern printf
-
-  section .data
-fmt db "argc:%d, argv[0]:%s, argv[1]:%s", 10, 0
-
-  section .text
+    global main
+    extern printf
+ 
+    section .data
+fmt: db "argc:%d, argv[0]:%s, argv[1]:%s", 10, 0
+ 
+    section .text
 main:
-  push ebp
-  mov ebp, esp
-  
-  mov eax, dword[ebp + 8]
-  mov ebx, dword[ebp + 12]
+    push ebp
+    mov ebp, esp
 
-  push dword [ebx + 4]
-  push dword [ebx + 0]
-  push eax
-  push fmt
-  call printf
+    mov eax, dword[ebp + 8]
+    mov ebx, dword[ebp + 12]
 
-  xor eax, eax
-  leave
-  ret
+    push dword [ebx + 4]
+    push dword [ebx + 0]
+    push eax
+    push fmt
+    call printf
+    xor eax, eax
+
+    mov esp, ebp
+    pop ebp
+    ret
 </pre><br>
 
 <p>
 編譯、執行
 </p>
 <pre>
-$ nasm -felf32 main.s -o main.o
-$ gcc main.o -o main -m32
-$ ./main test
-  argc:2, argv[0]:./main, argv[1]:test
+$ nasm -f elf32 main.s
+$ i686-linux-gnu-gcc main.o -o main -static
+$ qemu-i386 ./main test
+    argc:2, argv[0]:./main, argv[1]:test
 </pre><br>
 
 <p>
