--- a/program/nasm/x86_hello_int80.htm
+++ b/program/nasm/x86_hello_int80.htm
@@ -44,40 +44,50 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>NASM &gt;&gt; Assembly (x86)</h3>
+<h3>Netwide Assembler (NASM) &gt;&gt; Assembly (x86)</h3>
 <p><b>hello, world! (int 0x80)</b></p>
 <hr size="1">
 <p>
+參考資訊：<br>
+1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/HEAD/constants/syscalls.md">syscall</a><br>
+2. <a href="https://tldp.org/HOWTO/Assembly-HOWTO/hello.html">Assembly-HOWTO</a><br><br>
+
 main.s
 </p>
 <pre class="brush:asm">
-  global _start
-  
-  section .text
+    global _start
+
+    section .data
+msg: db "hello, world!", 10
+len: equ $ - msg
+   
+    section .text
 _start:
-  mov eax, 4
-  mov ebx, 1
-  mov ecx, msg
-  mov edx, msg_len
-  int 80h
-
-  mov eax, 1
-  mov ebx, 0
-  int 80h
-
-  section .data
-msg: db 'hello, world!', 10
-msg_len: equ $ - msg
+    mov eax, 4
+    mov ebx, 1
+    mov ecx, msg
+    mov edx, len
+    int 80h
+ 
+    mov eax, 1
+    mov ebx, 0
+    int 80h 
 </pre><br>
+
+<table>
+<tr><th>NR</th><th>syscall name</th><th>eax</th><th>arg0(ebx)</th><th>arg1(ecx)</th><th>arg2(edx)</th></tr>
+<tr><td>1</td><td>exit</td><td>1</td><td>int error_code</td><td></td><td></td></tr>
+<tr><td>4</td><td>write</td><td>4</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
+</table><br>
 
 <p>
 編譯、執行
 </p>
 <pre>
-$ nasm -felf32 main.s
-$ ld -m elf_i386 main.o -o main
-$ ./main 
-  hello, world!
+$ nasm -f elf32 main.s
+$ i686-linux-gnu-gcc main.o -o main -static -nostdlib
+$ qemu-i386 ./main
+    hello, world!
 </pre><br>
 
 <p>
