--- a/program/nasm/x86_hello_sysenter.htm
+++ b/program/nasm/x86_hello_sysenter.htm
@@ -44,54 +44,68 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>NASM &gt;&gt; Assembly (x86)</h3>
+<h3>Netwide Assembler (NASM) &gt;&gt; Assembly (x86)</h3>
 <p><b>hello, world! (sysenter)</b></p>
 <hr size="1">
 <p>
+參考資訊：<br>
+1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/HEAD/constants/syscalls.md">syscall</a><br>
+2. <a href="https://reverseengineering.stackexchange.com/questions/2869/how-to-use-sysenter-under-linux">how-to-use-sysenter-under-linux</a><br><br>
+
 main.s
 </p>
 <pre class="brush:asm">
-  global _start
+    global _start
    
-  section .text
+    section .data
+msg: db 'hello, world!', 10
+len: equ $ - msg
+   
+    section .text
 _start:
-  push ebp
-  mov ebp, esp
-  mov edx, msg_len
-  mov ecx, msg
-  mov ebx, 1
-  mov eax, 4
-  push ret
-  push ecx
-  push edx
-  push ebp
-  mov ebp, esp
-  sysenter
+    push ebp
+    mov ebp, esp
+
+    mov eax, 4
+    mov ebx, 1
+    mov ecx, msg
+    mov edx, len
+    push ret
+    push ecx
+    push edx
+    push ebp
+    mov ebp, esp
+    sysenter
  
 ret:
-  mov ebx, 0
-  mov eax, 1
-  push ret
-  push ecx
-  push edx
-  push ebp
-  mov ebp, esp
-  sysenter
-   
-  section .data
-msg: db 'hello, world!', 10
-msg_len: equ $ - msg
+    mov eax, 1
+    mov ebx, 0
+    push ret
+    push ecx
+    push edx
+    push ebp
+    mov ebp, esp
+    sysenter
 </pre><br>
+
+<table>
+<tr><th>NR</th><th>syscall name</th><th>eax</th><th>arg0(ebx)</th><th>arg1(ecx)</th><th>arg2(edx)</th></tr>
+<tr><td>1</td><td>exit</td><td>1</td><td>int error_code</td><td></td><td></td></tr>
+<tr><td>4</td><td>write</td><td>4</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
+</table><br>
 
 <p>
 編譯、執行
 </p>
 <pre>
-$ nasm -felf32 main.s
-$ ld -m elf_i386 main.o -o main
+$ nasm -f elf32 main.s
+$ gcc main.o -o main -nostdlib
 $ ./main 
-  hello, world!
-</pre><br>
+    hello, world!
+</pre>
+<p>
+P.S. 於Debian x64環境測試
+</p>
 
 <p>
 <br><a href="../../program.htm">返回上一頁</a>
