GNU Refined code.

--- a/program/gnu/x86_hello_sysenter.htm
+++ b/program/gnu/x86_hello_sysenter.htm
@@ -98,7 +98,7 @@ final:
 編譯、執行
 </p>
 <pre>
-$ gcc main.s -o main -nostdlib
+$ gcc -m32 main.s -o main -nostdlib
 $ ./main
     hello, world!
 </pre>
