--- a/program/nasm/x86_hello_sysenter.htm
+++ b/program/nasm/x86_hello_sysenter.htm
@@ -99,7 +99,7 @@ ret:
 </p>
 <pre>
 $ nasm -f elf32 main.s
-$ gcc main.o -o main -nostdlib
+$ gcc -m32 main.o -o main -nostdlib
 $ ./main 
     hello, world!
 </pre>
