NASM Refined code.

--- a/program.htm
+++ b/program.htm
@@ -338,6 +338,10 @@ Netwide Assembler (NASM)</h3>
   開發環境</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/nasm/x86_hello_gs.htm">
+  hello, world! (gs)</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/nasm/x86_hello_printf.htm">
   hello, world! (printf)</a><br>
 
