FASM How to prepare environment and a hello example by using int-0x80 method.

--- a/program.htm
+++ b/program.htm
@@ -75,7 +75,9 @@
 <br><br>
 <p>
   <a href="#gnu"><img src="img/photos/gnu.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="GNU"/></a>
-  <a href="#nasm"><img src="img/photos/nasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="NASM"/></a>
+  <a href="#fasm"><img src="img/photos/fasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Flat Assembler (FASM)"/></a>
+  <a href="#nasm"><img src="img/photos/nasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Netwide Assembler (NASM)
+"/></a>
   <a href="#rust"><img src="img/photos/rust.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Rust"/></a>
   <a href="#masm32"><img src="img/photos/masm32.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="MASM32"/></a>
   <a href="#hla"><img src="img/photos/hla.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="HLA"/></a>
@@ -323,6 +325,23 @@ int 0x80、sysenter、syscall</a><br>
 &lowast;
 <a href="program/gnu/fix_undef_limb.htm">
 解決"undefined reference to __gmpn_invert_limb"問題</a>
+<br><br><br><br>
+
+<div id="fasm"></div>
+<h3><img src="img/photos/fasm.jpg" class="floatLeft"/>
+Flat Assembler (FASM)</h3>
+<hr size="1"><br><br><br><br><br>
+
+&oplus;
+<b>Assembly (x86)</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/fasm/x86_setup.htm">
+  開發環境</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="program/fasm/x86_hello_int80.htm">
+  hello, world! (int 0x80)</a><br>
 <br><br><br><br>
 
 <div id="nasm"></div>
