GNU Refined cde.

--- a/program.htm
+++ b/program.htm
@@ -204,12 +204,16 @@ GNU</h3>
 <b>Assembly (ARM)</b><br>
   
   &emsp;&emsp;&lowast;
-  <a href="program/gnu/arm_hello_swi.htm">
-  hello, world! (swi)</a><br>
-
-  &emsp;&emsp;&lowast;
   <a href="program/gnu/arm_hello_printf.htm">
   hello, world! (printf)</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/gnu/arm_hello_swi_eabi.htm">
+  hello, world! (swi, eabi)</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/gnu/arm_hello_swi_oabi.htm">
+  hello, world! (swi, oabi)</a><br>
 
 &oplus;
 <b>Assembly (ARM 64)</b><br>
