--- a/program/gnu/arm_hello_swi_oabi.htm
+++ b/program/gnu/arm_hello_swi_oabi.htm
@@ -45,13 +45,15 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>GNU &gt;&gt; Assembly (ARM)</h3>
-<p><b>hello, world! (swi)</b></p>
+<p><b>hello, world! (swi, eabi)</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/HEAD/constants/syscalls.md">syscall</a><br>
-2. <a href="https://github.com/kevinhooke/learning-arm-asm/blob/master/helloworld.s">helloworld</a><br>
-3. <a href="http://kerseykyle.com/articles/ARM-assembly-hello-world">ARM-assembly-hello-world</a><br><br>
+1. <a href="https://syscalls.w3challs.com/?arch=arm_strong">syscall</a><br>
+2. <a href="https://gist.github.com/bellbind/753290">example</a><br>
+3. <a href="https://github.com/kevinhooke/learning-arm-asm/blob/master/helloworld.s">helloworld</a><br>
+4. <a href="http://kerseykyle.com/articles/ARM-assembly-hello-world">ARM-assembly-hello-world</a><br>
+5. <a href="https://stackoverflow.com/questions/48183434/implementation-of-syscall-on-arm-oabi-what-is-svc-0x900071">implementation-of-syscall-on-arm-oabi-what-is-svc-0x900071</a><br><br>
 
 main.s
 </p>
@@ -64,21 +66,19 @@ len = . - msg
 
     .text
 _start:
-    mov r7, #4
     mov r0, #1
     ldr r1, =msg
     ldr r2, =len
-    swi 0
+    swi 0x900004
 
-    mov r7, #1
     mov r0, #0
-    swi 0
+    swi 0x900001
 </pre><br>
 
 <table>
-<tr><th>NR</th><th>syscall name</th><th>r7</th><th>arg0(r0)</th><th>arg1(r1)</th><th>arg2(r2)</th></tr>
-<tr><td>1</td><td>exit</td><td>1</td><td>int error_code</td><td></td><td></td></tr>
-<tr><td>4</td><td>write</td><td>4</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
+<tr><th>NR</th><th>syscall name</th><th>arg0(r0)</th><th>arg1(r1)</th><th>arg2(r2)</th></tr>
+<tr><td>0x900001</td><td>exit</td><td>int error_code</td><td></td><td></td></tr>
+<tr><td>0x900004</td><td>write</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
 </table><br>
 
 <p>
