GNU Refined code.

--- a/program/gnu/struct.htm
+++ b/program/gnu/struct.htm
@@ -67,7 +67,7 @@ int main(int argc, char **argv)
 
 <p>
 IDA Pro<br>
-<img src="define_struct/1.jpg" class="maxSize"><br><br>
+<img src="struct/1.jpg" class="maxSize"><br><br>
 
 main.s
 </p>
@@ -98,7 +98,7 @@ _start:
 
 <p>
 IDA Pro<br>
-<img src="define_struct/2.jpg" class="maxSize">
+<img src="struct/2.jpg" class="maxSize">
 </p>
 
 <p>
