FASM Refined code.

--- a/program.htm
+++ b/program.htm
@@ -359,6 +359,10 @@ Flat Assembler (FASM)</h3>
   開發環境</a><br>
   
   &emsp;&emsp;&lowast;
+  <a href="program/fasm/x86_hello_printf.htm">
+  hello, world! (printf)</a><br>
+  
+  &emsp;&emsp;&lowast;
   <a href="program/fasm/x86_hello_int80.htm">
   hello, world! (int 0x80)</a><br>
 <br><br><br><br>
