--- a/program/fasm/x86_hello_printf.htm
+++ b/program/fasm/x86_hello_printf.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Flat Assembler (FASM) &gt;&gt; Assembly (x86)</h3>
-<p><b>hello, world! (int 0x80)</b></p>
+<p><b>hello, world! (printf)</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
@@ -56,37 +56,35 @@
 main.s
 </p>
 <pre class="brush:asm">
-    format elf executable 3
-    entry start
-    
-msg: db "hello, world!", 10
-len = $ - msg
+    format elf
+    public main
+    extrn printf
+ 
+    section ".data"
+msg: db "helo, world!", 10, 0
 
-start:
-	mov	eax, 4
-	mov	ebx, 1
-	mov	ecx, msg
-	mov	edx, len
-	int	0x80
-
-	mov	eax, 1
-	xor	ebx, ebx
-	int	0x80
+    section ".text"
+main:
+    push ebp
+    mov ebp, esp
+ 
+    push msg
+    call printf
+    xor eax, eax
+ 
+    mov esp, ebp
+    pop ebp
+    ret
 </pre><br>
-
-<table>
-<tr><th>NR</th><th>syscall name</th><th>eax</th><th>arg0(ebx)</th><th>arg1(ecx)</th><th>arg2(edx)</th></tr>
-<tr><td>1</td><td>exit</td><td>1</td><td>int error_code</td><td></td><td></td></tr>
-<tr><td>4</td><td>write</td><td>4</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
-</table><br>
 
 <p>
 編譯、執行
 </p>
 <pre>
-$ qemu-i386 /usr/local/bin/fasm main.s 
+$ qemu-i386 /usr/local/bin/fasm main.s
+$ i686-linux-gnu-gcc main.o -o main -static
 $ qemu-i386 ./main
-    hello, world!
+    helo, world!
 </pre><br>
 
 <p>
